# syntax-highlighter

./: .gitignore  LICENSE  README.md  desktop.ini  pom.xml  syntax-highlighter.code-workspace  testOutput.txt
experiments/regex/: regexImplementation.ts
highlighterTesting/: README.md
highlighterTesting/minted/: customLexer.py  customLexer2.py  main.tex  readme.md
highlighterTesting/minted/customStyle/: customStyle.py  pyproject.toml  readme.md
highlighterTesting/minted/data/: input.tokens.json  input.tokens.spec.json  input.txt
highlighterTesting/minted/path/: customLexer2.py
highlighterTesting/textmate/automated/: package-lock.json  package.json  tsconfig.json
highlighterTesting/textmate/automated/src/: index.ts  linearTokenize.ts  loadGrammar.ts
highlighterTesting/textmate/vscode/: OBSERVATIONS.md  testText.hlt  vsc-extension-quickstart.md
highlighterTesting/textmate/vscode/syntaxes/: highlight.tmLanguage asLongAs.json  highlight.tmLanguage capture-groups.json  highlight.tmLanguage stateChange.json  highlight.tmLanguage.json
highlighterTesting/textmate/vscode/testInput/: testText2.hlt
highlighters/minted/: main.tex  pygmentsGrammar.json
highlighters/textmate/vscode/: CHANGELOG.md  OBSERVATIONS.md  README.md  package.json  testText.hlt
highlighters/textmate/vscode/syntaxes/: highlight.tmLanguage captures.json  highlight.tmLanguage copy.json  highlight.tmLanguage data.json  highlight.tmLanguage.json  (+5 more)
src/main/rascal/: Logging.rsc  Main.rsc  Scope.rsc  TestConfig.rsc  Visualize.rsc  Warning.rsc  convertGrammar.rsc
testFragments/: test.hlt
(+400 files in other folders)
